# rse-grand-challenge-dicom-de-identifier

./: .gitignore  .pre-commit-config.yaml  README.md  ct_minimal.dcm  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  release.yml
grand_challenge_dicom_de_identifier/: deidentifier.py  exceptions.py
tests/: __init__.py  test_deidentifier.py
